# pds_assignment_1

./: .gitignore  README.md
Graphs/belgium_osm/: belgium_osm.txt  belgium_osm_cilk.txt  belgium_osm_pthreads.txt
Graphs/com_youtube/: com_youtube.txt  com_youtube_cilk.txt
Graphs/dblp_2010/: dblp_2010.txt  dblp_2010_cilk.txt  dblp_2010_pthread.txt
Graphs/mycielskian13/: mycielskian13.txt  mycielskian13_cilk.txt
Graphs/naca_0015/: naca_0015.txt  naca_0015_cilk.txt  naca_0015_pthreads.txt
Graphs/test_matrices/: small_graph_2.mtx
ProvidedCode/: notebook.jl
PythonDiagrams/: belgium_osm.txt  com_youtube.txt  dblp_2010.txt  main.py  mycielskian13.txt  naca_0015.txt  requirements.txt
Report/: report.docx
TriangleCalculator/: .gitignore  CMakeLists.txt  Makefile  compare.c  read_matrix.c  serial_main.c  spare_code.c  test_main.c  triangles_serial.c
TriangleCalculator/Julia/: serial_triangle_count.jl  test.jl
TriangleCalculator/OpenCilk/: cilk_matrix_manipulation.c  cilk_matrix_manipulation.h  cilk_parallel.c
TriangleCalculator/OpenMP/: m_man_openmp.c  openmp_parallel.c  openmp_parallel.h
TriangleCalculator/libraries/: csr_matrix.c  csr_matrix.h  matrix_manipulation.c  matrix_manipulation.h  write_csr_to_file.c
TriangleCalculator/linux/: Makefile  cilk_main.c  cilk_matrix_manipulation.c  cilk_matrix_manipulation.h  csr_matrix.h  m_man_openmp.h  matrix_manipulation.c  matrix_manipulation.h  test.c
TriangleCalculator/linux/src/: opencilk_main.c  test_main.c
TriangleCalculator/linux/src/OpenCilk/: cilk_parallel.c
TriangleCalculator/linux/src/OpenMP/: openmp_parallel.c
TriangleCalculator/linux/src/Pthreads/: pthreads_parallel.h
TriangleCalculator/linux/src/libraries/: csr_matrix.c  matrix_manipulation.c
TriangleCalculator/private/: spare_code.c
TriangleCalculator/src/: openmp_main.c  pthread_main.c  serial_main.c
TriangleCalculator/src/OpenCilk/: cilk_parallel.c  cilk_parallel.h
TriangleCalculator/src/OpenMP/: openmp_parallel.c
TriangleCalculator/src/Pthreads/: pthreads_parallel.c
TriangleCalculator/src/Serial/: serial_mult.c  serial_mult.h
TriangleCalculator/src/libraries/: csr_matrix.c  csr_matrix.h  matrix_manipulation.h  write_csr_to_file.c  write_csr_to_file.h
